[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/theme/fonts/font_title_small.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/theme/panel_darker.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/UIQuizChoice.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0.0941176, 0.321569, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="UIQuizChoice" type="PanelContainer"]
margin_right = 101.0
margin_bottom = 94.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 1 )
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outline" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 400.0
margin_bottom = 190.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 400.0
margin_bottom = 190.0

[node name="ChoiceView" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 170.0

[node name="Question" type="Label" parent="MarginContainer/ChoiceView"]
margin_right = 360.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.960784, 0.980392, 0.980392, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Question"

[node name="Content" type="RichTextLabel" parent="MarginContainer/ChoiceView"]
margin_top = 42.0
margin_right = 360.0
margin_bottom = 71.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Explanation"
text = "Explanation"
fit_content_height = true

[node name="Choices" type="VBoxContainer" parent="MarginContainer/ChoiceView"]
margin_top = 87.0
margin_right = 360.0
margin_bottom = 87.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="Button" parent="MarginContainer/ChoiceView"]
margin_top = 103.0
margin_right = 360.0
margin_bottom = 150.0
text = "Submit"

[node name="ResultView" type="VBoxContainer" parent="MarginContainer"]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 170.0

[node name="Label" type="Label" parent="MarginContainer/ResultView"]
margin_right = 400.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.960784, 0.980392, 0.980392, 1 )
custom_fonts/font = ExtResource( 2 )
text = "You're right!"

[node name="Explanation" type="RichTextLabel" parent="MarginContainer/ResultView"]
margin_top = 30.0
margin_right = 400.0
margin_bottom = 94.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Explanation"
text = "Explanation"
fit_content_height = true

[node name="Tween" type="Tween" parent="."]
